maven run for base env